# darling-workspace

./: .gitattributes  .gitignore  AGENTS.md  README.md  base.xml  deploy-baseline.md5  doctor-allow-drift.txt  locked.xml  mise.toml  west-commands.yml  west.lock.yml  west.yml  workspace.env.example
.beads/: .gitignore  config.yaml  issues.jsonl
.claude/: settings.sample.json
.github/workflows/: patch-stack-lock-first.yml  patch-stack-shadow.yml  test-infra.yml
audits/: red-tests-2026-07-08.md  test-quality-2026-07-10.md
ci/: bootstrap-west.sh  build-guest-macho-batch.sh  build-guest-macho-pilot.sh  cleanup-rootless-prefixes.sh  collect-rootless-diagnostics.sh  compare-clt-provenance.sh  compare-guest-macho-batch.py  compare-guest-macho-batch.sh  compare-guest-macho-pilot.py  compare-guest-macho-pilot.sh  compare_clt_provenance.py  emit-guest-macho-batch-script.py  guest-toolchain-ccache.sh  guest_macho_batch_specs.py  inspect-guest-macho-batch.py  inspect-guest-macho.py  install-darling-build-deps.sh  patch_stack_lock_first_acceptance.py  patch_stack_shadow_acceptance.py  read-tsv-field.py  rootless-prefix.sh  run-macos-installed-tests.sh  run-rootless-bootstrap-diagnostic.sh  run-test-tier.sh  verify-clt-provenance.sh  verify_clt_provenance.py  west-update-parallel.sh
diagnostics/: README.md  darlingserver-kwq-call-tracing.patch
docs/: branch-migration.md  clt-provenance-041-90419.txt  foundational-review-2026-06-12.md  libressl-hosted-immutable-tag-pilot.md  mega-branch-audit-2026-06-12.md  patch-stack-canonical-migration-report.md  patch-stack-legacy-mbox-retirement-readiness.md  patch-stack-lock-first-transition.md  patch-stack-lock-materialization.md  patch-stack-preflight.md  perf-work-triage-2026-07-01.md  suid-investigation.md  test-infra.md  west-spike.md  xnu-hosted-immutable-tag-pilot.md
handoff/: manifest.json  root.bundle  src__external__darlingserver.bundle  src__external__dyld.bundle  src__external__installer.bundle  src__external__libc.bundle  src__external__libplatform.bundle  src__external__libpthread.bundle  src__external__libsystem.bundle  src__external__libunwind.bundle  src__external__objc4.bundle  src__external__perl.bundle  src__external__xnu.bundle  src__external__zlib.bundle
hooks/: pretooluse-build-gate.sh  stop-durability-reminder.sh
pr-drafts/: README.md  darlingserver-assert-wait-cancel-stale-timer.md  darlingserver-cancel-wait-timer.md  darlingserver-exc-fatal-reply-bound.md  darlingserver-fork-checkin-bound.md  darlingserver-fork-checkin-sticky-flag.md  darlingserver-microthread-resume-race.md  darlingserver-processcall-exception-guard.md  darlingserver-psynch-cvwait-balanced.md  darlingserver-pushreply-pipe-leak.md  libplatform-bzero-return-register.md  libpthread-psynch-negative-returns.md  libressl-283-nist-strict-aliasing.md  mldr-glibc-fork-reset.md  perl-disable-nsgetexecutablepath.md  top-level-sandbox-exec-pass-through.md  top-level-sdk-homebrew-detection.md  xnu-chown-disabled-null-guard.md  xnu-darwin-priority.md  xnu-fork-postfork-child.md  xnu-getattrlist-name-objtype.md  xnu-getattrlistbulk.md  xnu-psynch-cvsignal-args.md  xnu-psynch-negative-errno.md  xnu-select-pselect-fdset.md  xnu-sigexc-debug-flood.md  xnu-sigexc-default-resend-self.md  xnu-sigexc-sa-restart.md  xnu-socket-siocgifconf.md  xnu-ulock-wait-eintr-retry.md  xnu-vchroot-pathnull-guard.md
schemas/: patch-stack-lock-v1.schema.json  patch-stack-lock-v2.schema.json
scripts/: check_python_syntax.py  export_patches.py  generate_manifest.py  generate_west.py  handoff.py  west-job.sh  west-search.py  west_workspace.py
source/: AGENTS.md
state/: README.md  repos.tsv
testkit/: CMakeLists.txt  runtime-profiles.yml
testkit/cmake/: AddCompatTest.cmake  MissingDarlingShell.cmake  MissingMacOSRunner.cmake
testkit/fixtures/guest-macho/v1/: corpus.yml
testkit/scripts/: capture-darling-prefix-timeout.sh  darling-guest-shell.sh  expect-failure.sh  run-darling-c-test.sh
tests/: abort_with_payload_no_group_broadcast.c  abort_with_payload_self_signal_contract.c  abort_with_payload_self_signal_contract.sh  build_drift_gate_contract.sh  bzero_return_register_contract.c  bzero_return_register_contract.sh  bzero_return_register_guest.c  checkin_exec_trace_guest.c  chown_disabled_null_guard_contract.c  chown_disabled_null_guard_contract.sh  chown_disabled_null_guard_guest.c  commpage_map_fixed_contract.c  commpage_map_fixed_contract.sh  darling_behavior_models.py  darlingserver_behavior_models.py  darwin_priority_guest.c  dylib_recv_adaptive_spin_contract.c  dylib_recv_adaptive_spin_contract.sh  eunion_exec_path_trace_guest.c  eunion_exitpath_systemroot_guest.c  eunion_metadata_guest.c  eunion_mkdir_opaque_guest.c  eunion_mutation_guest.c  eunion_nested_bind_guest.c  eunion_path_direnum_guest.c  eunion_path_errors_guest.c  eunion_prefix_smoke_guest.c  eunion_relative_at_guest.c  eunion_special_create_guest.c  eunion_xattr_policy_guest.c  fatal_exception_reply_contract.c  fatal_exception_unreplying_handler_guest.c  fd_guard_ebadf_contract.c  fd_guard_ebadf_contract.sh  fd_guard_ebadf_guest.c  fork_checkin_bound_contract.cpp  fork_checkin_drop_timeout_guest.c  fork_checkin_forced_lost_wakeup_guest.c  fork_checkin_signal_storm_guest.c  fork_checkin_sticky_contract.cpp  (+130 more)
west_commands/: beads_aliases.py  darling_build.py  darling_fresh_prefix.py  darling_prefix_repair.py  darling_rootless_debug_cleanup.py  darling_source_worktree.py  deploy_transaction.py  doctor.py  dw.py  fresh_prefix.py  guest_macho_validation.py  guest_toolchain.py  patch.py  patch_git.py  patch_stack_lock_first.py  patch_stack_materialize.py  patch_stack_preflight.py  patch_stack_shadow.py  pr.py  prefix_repair.py  rootless_debug_cleanup.py  source_worktree.py  test.py  test_bootstrap.py  test_cmake.py  test_ctest.py  test_dispatch.py  test_execution.py  test_guest_c.py  test_guest_execution.py  test_guest_macho.py  test_manifest.py  test_prefix.py  test_profile.py  test_resources.py  test_results.py  test_runtime.py  test_runtime_build.py  test_runtime_deploy.py  test_runtime_evidence.py  (+5 more)
(+430 files in other folders)
